--- a/src/config/database.yml
+++ b/src/config/database.yml
@@ -1,5 +1,6 @@
 development:
   adapter: mysql2
+  encoding: utf8
   database: events
   username: root
   password: root
@@ -8,6 +9,7 @@ development:
 
 test:
   adapter: mysql2
+  encoding: utf8
   database: events_test
   username: root
   password: root
@@ -16,6 +18,7 @@ test:
 
 production:
   adapter: mysql2
+  encoding: utf8
   database: events_production
   username: root
   password: root
