--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,3 +43,13 @@ Metrics/CyclomaticComplexity:
   Enabled: false
 Metrics/PerceivedComplexity:
   Enabled: false
+Layout/FirstHashElementIndentation:
+  Enabled: false
+Minitest/MultipleAssertions:
+  Enabled: false
+Metrics/ParameterLists:
+  Enabled: false
+Layout/LineLength:
+  Enabled: false
+Style/SuperArguments:
+  Enabled: false
