chore: ✨ add rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,55 +1,9 @@
-require:
-  - rubocop-performance
-  - rubocop-minitest
+inherit_from:
+  - .rubocop_dev.yml
+  - .rubocop_test.yml
 
 AllCops:
-  TargetRubyVersion: 3.3.0
+  TargetRubyVersion: 3.2.1
   SuggestExtensions: false
   NewCops: enable
-
-Style/FrozenStringLiteralComment:
-  Enabled: true
-Style/Documentation:
-  Enabled: false
-Lint/UnusedMethodArgument:
-  Enabled: false
-Metrics/MethodLength:
-  Enabled: false
-Layout/MultilineMethodCallIndentation:
-  Enabled: false
-Layout/MultilineMethodCallBraceLayout:
-  Enabled: false
-Metrics/AbcSize:
-  Enabled: false
-Naming/PredicateName:
-  Enabled: false
-Naming/FileName:
-  Enabled: false
-Style/MixinGrouping:
-  Enabled: false
-Lint/ConstantDefinitionInBlock:
-  Enabled: false
-Metrics/BlockLength:
-  Enabled: false
-Style/RedundantConditional:
-  Enabled: false
-Style/IfWithBooleanLiteralBranches:
-  Enabled: false
-Style/OptionalBooleanParameter:
-  Enabled: false
-Style/GuardClause:
-  Enabled: false
-Metrics/CyclomaticComplexity:
-  Enabled: false
-Metrics/PerceivedComplexity:
-  Enabled: false
-Layout/FirstHashElementIndentation:
-  Enabled: false
-Minitest/MultipleAssertions:
-  Enabled: false
-Metrics/ParameterLists:
-  Enabled: false
-Layout/LineLength:
-  Enabled: false
-Style/SuperArguments:
-  Enabled: false
+  DisabledByDefault: true
